	PR c++/79657 	* semantics.c (finish_underlying_type): Bail out for incomplete enums.

* g++.dg/ext/underlying_type12.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245658 138bc75d-0d04-0410-961f-82ee72b054a4